--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJS6cT1hK4QH68BXNYHA1a",
+      "authorship_tag": "ABX9TyMFXqsIv/K0TMPE2Sf6brmM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "59e72b16-bc17-4b0d-f3af-ce6d24b4b6a2"
+        "outputId": "696825d2-a57b-4562-9d58-52c06dc96aaf"
       },
       "source": [
         "!elixir -v\n",
@@ -80,7 +80,7 @@
             "Erlang/OTP 24 [erts-12.0.2] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
             "\n",
             "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n",
-            "Sun Jun 20 17:04:49 UTC 2021\n"
+            "Mon Jun 21 17:38:28 UTC 2021\n"
           ],
           "name": "stdout"
         }
@@ -569,11 +569,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_sa-Ham7fiHB",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f7eed4d5-b6ad-4473-d371-04e9dfe51ccd"
+        "id": "_sa-Ham7fiHB"
       },
       "source": [
         "!elixir -e 'IO.inspect fn a,b  -> a + b end'\n",
@@ -582,20 +578,8 @@
         "!elixir -e 'sum = fn (a,b) -> a + b end; IO.puts is_function sum'\n",
         "!elixir -e 'sum = fn (a,b) -> a + b end; IO.puts is_function(sum, 2)'"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "#Function<43.40011524/2 in :erl_eval.expr/5>\n",
-            "7\n",
-            "7\n",
-            "true\n",
-            "true\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -610,27 +594,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q2pjSx8CXoT4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2f050be1-19e9-4cc1-c96b-006bf87dd3c8"
+        "id": "q2pjSx8CXoT4"
       },
       "source": [
         "!elixir -e 'sum = &(&1 + &2); IO.puts sum.(3,4)'\n",
         "!elixir -e 'sum = &(&1 + &2); double = &(sum.(&1,&1)); IO.puts double.(7)'"
       ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "7\n",
-            "14\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -646,26 +617,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y8lMsz7iZBU7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1c8839ea-257c-437b-c9ce-2745b029a034"
+        "id": "y8lMsz7iZBU7"
       },
       "source": [
         "# 質問 次の無名関数をキャプチャー演算子を使って書けるか\n",
         "!elixir -e 'IO.puts (fn -> _x = 1 end).()'"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1792,11 +1751,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LNZhj9a7Dtvp",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fbb52712-4e2d-4908-9bd1-817b3bee0eb5"
+        "id": "LNZhj9a7Dtvp"
       },
       "source": [
         "%%writefile temp.exs\n",
@@ -1814,39 +1769,19 @@
         "\n",
         "IO.inspect Get_token.get_token(str)"
       ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting temp.exs\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_zGIE_VwEOiF",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a82ea2c3-f1a5-4d54-db9b-507bee7933dd"
+        "id": "_zGIE_VwEOiF"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\"tokenvalue\"\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1865,37 +1800,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dD0Q6rGKaMb2",
-        "outputId": "ecf7e2e6-f835-4c08-e2bb-aaa893a9278e"
+        "id": "dD0Q6rGKaMb2"
       },
       "source": [
         "!elixir -e 'IO.inspect users = [john: %{name: \"John\", age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"]}, mary: %{name: \"Mary\", age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"]}]' "
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[\n",
-            "  john: %{age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
-            "  mary: %{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
-            "]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CWlsyspLaxs4",
-        "outputId": "5db7e6e3-8179-4a07-bebf-189bb30af272"
+        "id": "CWlsyspLaxs4"
       },
       "source": [
         "# !elixir -e 'IO.inspect users[:mary] <= users はキーワードリストなので map.field 構文は使えない\n",
@@ -1903,26 +1819,13 @@
         "# !elixir -e 'IO.inspect users[:john].age <= john は map なので map.field 構文が使える\n",
         "!elixir -e 'users = [john: %{name: \"John\", age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"]}, mary: %{name: \"Mary\", age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"]}]; IO.inspect users[:john].age' \n"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "%{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
-            "27\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3p9q8Ho2Z7Y_",
-        "outputId": "95a753f0-b422-4d28-e718-a29a83bdeacb"
+        "id": "3p9q8Ho2Z7Y_"
       },
       "source": [
         "# 値を書き替えるには put_in を用いる\n",
@@ -1931,33 +1834,13 @@
         "# !elixir -e 'IO.inspect users[:john].age\n",
         "!elixir -e 'users = [john: %{name: \"John\", age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"]}, mary: %{name: \"Mary\", age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"]}]; IO.inspect users = put_in(users[:john].age, 31); IO.inspect users[:john].age' \n"
       ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[\n",
-            "  john: %{age: 31, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
-            "  mary: %{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
-            "]\n",
-            "[\n",
-            "  john: %{age: 31, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
-            "  mary: %{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
-            "]\n",
-            "31\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zhH4IsF5cVh0",
-        "outputId": "c9e372a3-1dd4-4765-b152-407e6a178a26"
+        "id": "zhH4IsF5cVh0"
       },
       "source": [
         "# update_in マクロは、第 1 引数の値を第 2 引数に渡した関数で処理する\n",
@@ -1972,47 +1855,19 @@
         "\n",
         "IO.inspect users[:mary].languages"
       ],
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting temp.exs\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jQLIpPcvhTBS",
-        "outputId": "2f353a8c-dc89-4fb5-e8c2-a196e9928da2"
+        "id": "jQLIpPcvhTBS"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[\n",
-            "  john: %{age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
-            "  mary: %{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
-            "]\n",
-            "[\n",
-            "  john: %{age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
-            "  mary: %{age: 29, languages: [\"Elixir\", \"F#\"], name: \"Mary\"}\n",
-            "]\n",
-            "[\"Elixir\", \"F#\"]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2056,11 +1911,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2jUj4drutj2_",
-        "outputId": "f057f8b8-6c6f-4571-9d51-77ea0de48b71",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2jUj4drutj2_"
       },
       "source": [
         "%%writefile temp.exs\n",
@@ -2072,63 +1923,31 @@
         "\n",
         "IO.puts Math.sum(1, 2)"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Writing temp.exs\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GCyTKXsgt7Px",
-        "outputId": "4f17bd07-95a4-4738-fbee-86f409fec955",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "GCyTKXsgt7Px"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b0B0aSx0EdGt",
-        "outputId": "905f72cd-e7de-47aa-8185-0aa29bc44ced",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "b0B0aSx0EdGt"
       },
       "source": [
         "# 実験 シェルワンライナー\n",
         "!elixir -e 'IO.inspect (&(&1+&2)).(1,2)'"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2168,14 +1987,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E-nNET93V_Ek"
+        "id": "E-nNET93V_Ek",
+        "outputId": "ad6576a8-501e-4cff-aa34-05ecb957c4a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "\n",
-        "関数の定めには、ガードと複数の句が加えられます。複数の句は、\n",
-        "Elixirが上から順に試し、マッチした句を実行するのです。引数がいずれにも\n",
-        "マッチしなければ、エラーになります。なお、関数名の最後に疑問符?を添えるのは、\n",
-        "論理値が返される場合のElixirにおける命名規則です。\n",
+        "# 関数の引数に条件を加えることができ、上からマッチして行って、どれにも合致しないとエラーになる\n",
+        "%%writefile temp.exs\n",
         "defmodule Math do\n",
         "  def zero?(0) do\n",
         "    true\n",
@@ -2188,22 +2008,111 @@
         "\n",
         "IO.puts Math.zero?(0)   #=> true\n",
         "IO.puts Math.zero?(1)   #=> false\n",
-        "IO.puts Math.zero?([1]) #=> ** (FunctionClauseError)\n",
-        "IO.puts Math.zero?(0.0) #=> ** (FunctionClauseError)\n",
+        "# IO.puts Math.zero?([1]) #=> ** (FunctionClauseError)\n",
+        "# IO.puts Math.zero?(0.0) #=> ** (FunctionClauseError)\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_RPrYTeTMrgF"
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AdBTSQNSrMYg"
+      },
+      "source": [
+        "メモ\n",
         "\n",
-        "if と同じく、名前つき関数にはdo/endブロックのほか、do:を用いたキーワードリストの構文が使えます(「Elixir入門 05: 条件 - case/cond/if」「do/endブロック」および「Elixir入門 07: キーワードリストとマップ」「キーワードリスト」参照)。前掲コードは、つぎのようにも書けるのです。\n",
+        "ということはランタイムエラーだね。 型で事前にエラーを予防することはできないのか。 そういうタイプの言語ではない、ということか。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qgdFxR72MqEN",
+        "outputId": "053b9190-9e19-4aec-949a-257279010a69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# if と同様に、名前つき関数はキーワードリストの do:を用いて 1行で簡略に書くことができる\n",
+        "%%writefile temp.exs\n",
         "defmodule Math do\n",
-        "  def zero?(0), do: true\n",
-        "  def zero?(x) when is_integer(x), do: false\n",
+        "  def zero?(0), do: \"too true\"\n",
+        "  def zero?(x) when is_integer(x), do: \"not true\"\n",
         "end\n",
-        "ただし、do:の構文は1行で済む場合に用い、複数行にわたるときはdo/endブロックで書いた方がよいでしょう。\n",
+        "\n",
+        "IO.puts Math.zero?(0) \n",
+        "IO.puts Math.zero?(1)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ayo0DlRQsbuo",
+        "outputId": "e3117664-bba1-4390-c94b-d2b6f6909c31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "too true\n",
+            "not true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nGeLGXS8sZ82"
+      },
+      "source": [
         "\n",
         "関数のキャプチャ\n",
         "前掲のMath.zero?/1が定められたモジュール(ファイル名math.exsとします)を例に、iexで関数のキャプチャを試してみましょう。\n",
         "$ iex math.exs\n",
         "iex> Math.zero?(0)\n",
         "true\n",
-        "Elixirは無名関数と名前つき関数を区別します。無名関数の納められた変数から関数を呼び出すには、変数のあとにドット.を添えなければなりません(「Elixir入門 02: 型の基本」「無名関数」参照)。\n",
+        "Elixirは無名関数と名前つき関数を区別します。無名関数の納められた変数から関数を呼び出すには、\n",
+        "変数のあとにドット.を添えなければなりません(「Elixir入門 02: 型の基本」「無名関数」参照)。\n",
         "\n",
         "キャプチャ演算子&/1を用いると、名前つき関数を変数に入れて、無名関数と同じように呼び出せます。代入する関数には、アリティを添えてください。なお、is_function/1は引数が関数かどうかを確かめます。\n",
         "iex> fun = &Math.zero?/1\n",
