--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPUjUP+VKxKshKUuDbrycct",
+      "authorship_tag": "ABX9TyPSfTTEy2Uer6zLurIQWJs2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 23,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -66,13 +66,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0b1aaed9-c884-4d7e-b6a0-56298f2baede"
+        "outputId": "35956c22-b3ed-4723-d129-a1f344cb7e4f"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 24,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
             "Erlang/OTP 24 [erts-12.0.2] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
             "\n",
             "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n",
-            "Tue Jun 22 07:10:49 UTC 2021\n"
+            "Tue Jun 22 10:14:34 UTC 2021\n"
           ],
           "name": "stdout"
         }
@@ -2015,15 +2015,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qilvfOt8b_i4"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "AdBTSQNSrMYg"
       },
       "source": [
@@ -2123,11 +2114,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CIbtOoqaQXga",
-        "outputId": "070231c7-cf11-43ea-b0b6-f1cdda4bd80a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "CIbtOoqaQXga"
       },
       "source": [
         "# 無名関数の場合 `&/1` 演算子で短く書ける\n",
@@ -2136,45 +2123,21 @@
         "!elixir -e ' square = &(&1*&1); IO.puts square.(3)'\n",
         "!elixir -e 'IO.puts (&(&1*&1)).(3)'"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "#Function<44.40011524/1 in :erl_eval.expr/5>\n",
-            "#Function<44.40011524/1 in :erl_eval.expr/5>\n",
-            "9\n",
-            "9\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b85FwnAYlAF8",
-        "outputId": "177b6911-d379-4571-e49e-2a11db49ceaa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "b85FwnAYlAF8"
       },
       "source": [
         "# 無名関数の組み合わせ\n",
         "!elixir -e 'square = &(&1*&1); square_sum = &(square.(&1) + square.(&2)); IO.puts square_sum.(3,4)' #=> 25\n",
         "!elixir -e 'square = &(&1*&1);IO.puts (&(square.(&1) + square.(&2))).(3,4)' #=> 25\n"
       ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "25\n",
-            "25\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2195,11 +2158,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r_v-_rJ4kcwW",
-        "outputId": "5d3d4abb-b473-4a82-925c-c8ade95a8873",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "r_v-_rJ4kcwW"
       },
       "source": [
         "# モジュールの関数を利用した新たな関数\n",
@@ -2208,27 +2167,13 @@
         "!elixir -e 'square = &(&1*&1); square_sum = &(square.(&1) + square.(&2)); hypot=&:math.sqrt(square_sum.(&1, &2)); IO.puts hypot.(3,4)' #=> 5.0\n",
         "!elixir -e 'hypot = &:math.sqrt(&1 * &1 + &2 * &2); IO.puts hypot.(3,4)'"
       ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "#Function<43.40011524/2 in :erl_eval.expr/5>\n",
-            "5.0\n",
-            "5.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uFjaMZ2woFo7",
-        "outputId": "0397f03f-2108-4a7c-ace4-65abc57af350",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "uFjaMZ2woFo7"
       },
       "source": [
         "# デフォルト引数\n",
@@ -2243,37 +2188,80 @@
         "IO.puts DefaultTest.dowork(\"hi\") #=> \"hi\"\n",
         "IO.puts DefaultTest.dowork(1) #=> 1"
       ],
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting temp.exs\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xaN90OJ7pVP8",
-        "outputId": "7e532ea3-1c5a-428d-dd6d-fa06c6cd46fa",
+        "id": "xaN90OJ7pVP8"
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IW2JJ0xdpQX5",
+        "outputId": "24ba1d7b-019e-4829-fd75-3d1e18546b8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!elixir temp.exs"
+        "# デフォルト値の値が評価されるのは、関数を定義した時ではなく、関数が呼び出されて\n",
+        "# デフォルト値が用いられた時に評価される\n",
+        "%%writefile temp.exs\n",
+        "defmodule Concat do\n",
+        "  def join(a, b, sep \\\\ \" \") do\n",
+        "    a <> sep <> b\n",
+        "  end\n",
+        "end\n",
+        "IO.puts Concat.join(\"hello\", \"world\") #=> \"hello world\"\n",
+        "IO.puts  Concat.join(\"hello\", \"world\", \", \") #=> \"hello, world\""
       ],
-      "execution_count": 42,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hello\n",
-            "hi\n",
-            "1\n"
+            "Writing temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qilvfOt8b_i4"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BhdZ4Ay-OZBr",
+        "outputId": "fe791b7a-4fd7-4e2a-d95c-d9b6318b4c51"
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello world\n",
+            "hello, world\n"
           ],
           "name": "stdout"
         }
@@ -2282,49 +2270,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IW2JJ0xdpQX5"
+        "id": "cOrgT_BrOD4i",
+        "outputId": "867176d6-b807-4056-9466-a29b4d36f6e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "デフォルト値にはどのような式でも与えられます。ただし、値が評価されるのは、関数を定義したときではありません\n",
-        "。関数が呼び出されてデフォルト値が用いられるたびに、その値は評価されるのです。\n",
-        "defmodule Concat do\n",
-        "  def join(a, b, sep \\\\ \" \") do\n",
-        "    a <> sep <> b\n",
-        "  end\n",
-        "end\n",
-        "iex(2)> Concat.join(\"hello\", \"world\")\n",
-        "\"hello world\"\n",
-        "iex(3)> Concat.join(\"hello\", \"world\", \", \")\n",
-        "\"hello, world\"\n",
-        "複数の句をもつ関数にも、デフォルト値は使えます。ただし、アリティを同じくする句には、\n",
-        "関数本体のないヘッダで定めなければなりません。コンパイルエラーのメッセージにはその旨が示されます。\n",
-        "defmodule Greeter do\n",
-        "  def hello(name \\\\ nil, language \\\\ \"em\") when is_nil(name) do\n",
-        "    phrase(language) <> \"world\"\n",
-        "  end\n",
-        "\n",
-        "  def hello(name, language \\\\ \"en\") do\n",
-        "    phrase(language) <> name\n",
-        "  end\n",
-        "\n",
-        "  defp phrase(\"en\"), do: \"hello, \"\n",
-        "  defp phrase(\"ja\"), do: \"こんにちは\"\n",
-        "end\n",
-        "** (CompileError) greeter.ex:6: definitions with multiple clauses and default values requi\n",
-        "re a header. Instead of:\n",
-        "    def foo(:first_clause, b \\\\ :default) do ... end\n",
-        "    def foo(:second_clause, b) do ... end\n",
-        "\n",
-        "one should write:\n",
-        "\n",
-        "    def foo(a, b \\\\ :default)\n",
-        "    def foo(:first_clause, b) do ... end\n",
-        "    def foo(:second_clause, b) do ... end\n",
-        "\n",
-        "def hello/2 has multiple clauses and defines defaults in one or more clauses\n",
-        "    greeter.ex:6: (module)\n",
-        "    (stdlib) erl_eval.erl:670: :erl_eval.do_apply/6\n",
-        "句が複数ある関数のデフォルト値は、ヘッダの引数に\\\\で与えてください。\n",
+        "# 複数の句をもつ関数にも、デフォルト値は使えるが、アリティを同じくする句には、\n",
+        "# 関数本体のないヘッダで定義する必要がある\n",
+        "%%writefile temp.exs\n",
         "defmodule Greeter do\n",
         "  def hello(name \\\\ nil, language \\\\ \"en\")\n",
         "\n",
@@ -2339,12 +2294,53 @@
         "  defp phrase(\"en\"), do: \"hello, \"\n",
         "  defp phrase(\"ja\"), do: \"こんにちは\"\n",
         "end\n",
-        "iex> Greeter.hello()\n",
-        "\"hello, world\"\n",
-        "iex> Greeter.hello(\"alice\")\n",
-        "\"hello, alice\"\n",
-        "iex> Greeter.hello(\"太郎\", \"ja\")\n",
-        "\"こんにちは太郎\"\n",
+        "\n",
+        "IO.puts Greeter.hello() #=> hello, world\n",
+        "IO.puts Greeter.hello(\"alice\") #=> hello, alice\n",
+        "IO.puts Greeter.hello(\"太郎\", \"ja\") #=> こんにちは太郎"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UMavkGYdPAB1",
+        "outputId": "b84b4865-2e71-4306-d345-607a651a0be9"
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello, world\n",
+            "hello, alice\n",
+            "こんにちは太郎\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xibflfQyO5Om"
+      },
+      "source": [
         "デフォルト値を与えるときは、関数の定義が重複しないよう気をつけてください。\n",
         "defmodule Concat do\n",
         "  def join(a, b) do\n",
@@ -2357,9 +2353,11 @@
         "    a <> sep <> b\n",
         "  end\n",
         "end\n",
-        "上の関数をコンパイルすると、つぎのような警告が示されます。ふたつの引数を渡すとつねにアリティ2の関数が呼び出され、アリティ3のデフォルト値が使われることはないからです。\n",
+        "上の関数をコンパイルすると、つぎのような警告が示されます。ふたつの引数を渡すとつねにアリティ2の関数が呼び出され、\n",
+        "アリティ3のデフォルト値が使われることはないからです。\n",
         "warning: this clause cannot match because a previous clause at line 2 always matches\n",
-        "エラーではありませんので、コンパイルはでき、関数も呼び出せます。アリティ3の関数は3つの引数を渡さないかぎり呼び出されません。引数がふたつのときどういう結果を得たいのか考え直すべきでしょう。\n",
+        "エラーではありませんので、コンパイルはでき、関数も呼び出せます。アリティ3の関数は3つの引数を渡さないかぎり呼び出されません。\n",
+        "引数がふたつのときどういう結果を得たいのか考え直すべきでしょう。\n",
         "iex(1)> Concat.join(\"hello\", \"world\")\n",
         "#=> join/2\n",
         "\"helloworld\"\n",
